tweak wording so collection cover and list views are more consistent

--- a/readux/collection/templates/collection/snippets/list_collection_cover.html
+++ b/readux/collection/templates/collection/snippets/list_collection_cover.html
@@ -6,7 +6,7 @@
 			<h3 class="title">{{ coll.title }}</h3>
 			<p class="number">
 				{% if count %}
-					<span class="badge">{{ count|intcomma }} item{{ count|pluralize }}</span>
+					<span class="badge">{{ count|intcomma }} volume{{ count|pluralize }}</span>
 				{% endif %}
 			</p>
 		</header>
