--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -14,6 +14,11 @@ body{
 	margin:0 2px 5px 0;
 }
 
+.btn-primary .text-muted {
+	color: inherit;
+	opacity: 0.6;
+}
+
 .facets{
 	padding:1em 0;
 	margin-bottom:2em;
