--- a/readux/books/templates/books/pages.html
+++ b/readux/books/templates/books/pages.html
@@ -4,18 +4,7 @@
 
 {% block content %}
 <div class="container">
-    <header class="page-header">
-        <h1>
-            <a href="{% url 'books:volume' vol.pid %}">
-                {{ vol.title }}
-
-                {% if vol.volume %}<span class="small">[{{ vol.volume }}]</span>{% endif %}
-            </a>
-        </h1>
-        <p class="lead">
-            {% if vol.date %}({{ vol.date|join:', ' }}){% endif %}
-        </p>
-    </header>
+    {% include 'books/snippets/volume_header.html' %}
     <article>
         <div class="container">
             <div id="view-toggle" class="pull-right">
