--- a/readux/books/templates/books/snippets/list_volume.html
+++ b/readux/books/templates/books/snippets/list_volume.html
@@ -1,7 +1,11 @@
+{% load static %}
 <div class="media">
   <a class="pull-left" href="{% url 'books:volume' obj.pid %}">
     {% if obj.hasPrimaryImage %}
       <img class="media-object" src="{% url 'books:page-mini-thumb' obj.hasPrimaryImage %}"/>
+
+    {% else %}
+        <img class="media-object" src="{% static 'img/notfound_mini_thumbnail.png' %}"/>
     {% endif %}
   </a>
 
