Fixed button controls on resize
[#67574772]

--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -41,7 +41,7 @@
 
                         <a id="list" alt="Gallery" title="Gallery" href="{% url 'books:pages' page.volume.pid %}?page={{page_chunk}}" class="btn"><span class="glyphicon glyphicon-th"></span></a>
                     </div>
-                    <br/>
+
                     <div id="deepzoom-controls" class="hidden">
                         <div class="btn-group">
                             <a id="dz-zoom-in" alt="Zoom In" title="Zoom In" href="#" class="btn"><span class="glyphicon glyphicon-plus"></span></a>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-4 col-sm-offset-4 text-center">
+                <div class="col-xs-3 col-sm-4 col-sm-offset-4 text-center">
                     <p class="text-muted">Page {{page.page_order}}</p>
                 </div>
 
