--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -53,7 +53,7 @@
    <div class="form-group">
       <div class="input-group">
       <label class="sr-only" for="{{ search_form.keyword.name }}">{{ search_form.keyword.label }}</label>
-      {% render_field search_form.keyword class+="form-control" placeholder="Search" %}
+      {% render_field search_form.keyword class+="form-control" placeholder="Search all volumes" %}
       {# TODO: help text #}
       <span class="input-group-btn">
         <button type="submit" class="btn">
