add a message when no pages match
[#67575752]

--- a/readux/books/templates/books/volume_search.html
+++ b/readux/books/templates/books/volume_search.html
@@ -12,6 +12,8 @@
             <div class="item-list">
                 {% for page in pages.object_list %}
                    {% include 'books/snippets/list_page.html' %}
+                 {% empty %}
+                    <h2 id="no-results-found">No matching pages for your search terms.</h2>
                 {% endfor %}
             </div>
         </div> {# /.container #}
