Added top pagination to pages
[#76459366]

- Added new drop down pagination to pages view

- Updated style and structure to work with new pagination

- Changed references to “pages” on thumbnails to “p.” in order to
differentiate between gallery pages (Page 8 is now p. 8)

--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -423,6 +423,15 @@ h1.site-title a:focus{
 	z-index: 300;
 }
 
+.pagination.pagination-dropdown{
+	margin-top: -10px;
+	margin-bottom: 30px;
+}
+#view-toggle.padding{
+	margin-top: 0px;
+	margin-right: 30px;
+}
+
 #view-toggle .btn {
 	border: 1px solid #DDD;
 	background-color: #FFF;
