--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="col-xs-3 col-sm-4 col-sm-offset-4 text-center">
-                    <p class="text-muted">Page {{page.page_order}}</p>
+                    <p class="text-muted">p. {{page.page_order}}</p>
                 </div>
 
             </div>
