--- a/readux/books/templates/books/pages.html
+++ b/readux/books/templates/books/pages.html
@@ -5,25 +5,32 @@
 {% block content %}
 <div class="container">
     {% include 'books/snippets/volume_header.html' %}
-    <article>
-        <div class="container">
-            <div id="view-toggle" class="pull-right">
-                <div class="btn-group">
-                    {% for page in pages.object_list %}
-                        {% if forloop.first %}
-                            <a id="covers" href="{% url 'books:page' page.pid %}" class="btn"><span class="glyphicon glyphicon-file"></span></a>
-                        {% endif %}
-                    {% endfor %}
+    <div class="row">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-2 col-md-offset-5">
+            {% if pages.has_other_pages %}
+               {% include 'eultheme/snippets/pagination_dropdown.html' with results=pages %}
+            {% endif %}
+        </div>
 
-                    <a id="list" href="{% url 'books:pages' vol.pid %}" class="btn active"><span class="glyphicon glyphicon-th"></span></a>
-                </div>
+        <div id="view-toggle" class="pull-right padding">
+            <div class="btn-group">
+                {% for page in pages.object_list %}
+                    {% if forloop.first %}
+                        <a id="covers" href="{% url 'books:page' page.pid %}" class="btn"><span class="glyphicon glyphicon-file"></span></a>
+                    {% endif %}
+                {% endfor %}
+
+                <a id="list" href="{% url 'books:pages' vol.pid %}" class="btn active"><span class="glyphicon glyphicon-th"></span></a>
             </div>
         </div>
+
+    </div>
+    <article>
 
         <div class="text-center text-muted">
             {% for page in pages.object_list %}
                 {% if forloop.first %}
-                    Pages {{ page.page_order }}
+                    p. {{ page.page_order }}
                 {% endif %}
                 {% if forloop.last %}
                     - {{ page.page_order|default:'end' }}
@@ -36,7 +43,7 @@
                 {# NOTE: would be nice to have some kind of fallback display when the image doesn't load... #}
                 <li class="">
                     <a class="cover thumbnail" style="background-image:url('{% url 'books:page-thumbnail' page.pid %}')" href="{% url 'books:page' page.pid %}" title="Page {{ page.page_order }}">
-                        <p class="page-number">Page {{page.page_order}}</p>
+                        <p class="page-number">p. {{page.page_order}}</p>
                     </a>
                 </li>
                 {% endfor %}
