Minor structure change to Page
[#67575752]

- Wrapped search snippet in a container div for consistency between
Page and Pages view.

--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -28,7 +28,9 @@
 
 
 {% block content %}
-    {% include 'books/snippets/volume_header.html' with vol=page.volume %}
+    <div class="container">
+        {% include 'books/snippets/volume_header.html' with vol=page.volume %}
+    </div>
     <article class="carousel page">
         <div class="carousel-inner">
 
