--- a/readux/books/templates/books/snippets/volume_header.html
+++ b/readux/books/templates/books/snippets/volume_header.html
@@ -21,8 +21,9 @@ Expects volume object as vol; set rdfa to true to enable RDFa properties.
         {# FIXME: or should we use schema:copyrightYear? #}
         {% endfor %}
     </p>
-    {# search inside this volume #}
-    {% if form %}
+
+    {# search inside this volume; *only* available if volume has pages loaded #}
+    {% if vol.has_pages and form %}
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <form class="search-bar" role="form" method="GET" action="{{ volume_url }}">
