Minor style adjustments
- Increased the min height of the image container to avoid footer
jumping on page load

- Set width on pagination drop down

--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -47,7 +47,7 @@ body{
 }
 
 article.carousel.page {
-    min-height: 30em;
+    min-height: 50em;
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -437,6 +437,7 @@ h1.site-title a:focus{
 .pagination.pagination-dropdown{
 	margin-top: -10px;
 	margin-bottom: 30px;
+	width: 100%;
 }
 
 .collection-section .pagination-dropdown .h4 {
