--- a/sitemedia/css/readux.css
+++ b/sitemedia/css/readux.css
@@ -638,18 +638,59 @@ header#page-bg .collection-image-info {
     position: absolute;
     bottom: 0;
     right: 0;
-    padding: 2em;
+    padding: 1em 1.5em 5px 3.5em;
     font-size: 12px;
     color: #A2A2A2;
     z-index: 100;
+    transition: bottom 0.6s ease, right 0.6s ease;
+    max-width: 300px;
+    min-height: 40px;
+    cursor: pointer;
 }
+
+header#page-bg .collection-image-info:before {
+    content: 'i';
+    position: absolute;
+    border: 1px solid;
+    width: 20px;
+    text-align: center;
+    top: 0;
+    left: 0;
+    margin: 10px 10px;
+    height: 20px;
+    font-family: serif;
+}
+
 header#page-bg .collection-image-info h3 {
     margin: 0;
+    font-size: 1.5em;
 }
 header#page-bg .collection-image-info p {
     width: 100%;
     color: #A2A2A2;
+    text-align: left;
 }
+
+header#page-bg .collection-image-info p.credit {
+    font-size: 0.9em;
+}
+
+header#page-bg .collection-image-info.collasped{
+	padding: 1.5em 1.75em;
+	background-color: rgba(22, 22, 22, 0.33);
+	opacity: 0.8;
+}
+
+header#page-bg .collection-image-info.collasped:hover{
+	opacity: 1;
+	background-color: rgba(0, 0, 0, 0.62);
+}
+
+header#page-bg .collection-image-info.collasped h3,
+header#page-bg .collection-image-info.collasped .info{
+	display: none;
+}
+
 
 /* class to hide page image without losing its size for page layout	 */
 .not-visible {
@@ -666,6 +707,18 @@ header#page-bg .collection-image-info p {
    left: 10%;
    height: 1000px;
   color: black;
+}
+
+#deepzoom-controls.fullpage{
+	z-index:100;
+}
+
+#deepzoom-controls.fullpage .btn-group:before{
+	display:none;
+}
+
+.fullpage+#zoom-page{
+	left:0;
 }
 
 .btn-primary .text-muted {
