Updated Volume UI
[#77410142]

- Added js toggle to show/hide long titles while maintaining RDFa

- Differentiated view buttons (Read online v. PDF)

- Adjusted layout for Volume on smaller screens

--- a/readux/books/templates/books/snippets/volume_header.html
+++ b/readux/books/templates/books/snippets/volume_header.html
@@ -9,7 +9,16 @@ Expects volume object as vol; set rdfa to true to enable RDFa properties.
         {% if volume_url != request.get_full_path|urlencode %}
           <a href="{{ volume_url }}">
         {% endif %}
-            <span {% if rdfa|default:0 %}property="schema:name"{% endif %}>{{ vol.title }}
+            <span {% if rdfa|default:0 %}property="schema:name"{% endif %}>
+                {% if volume_url != request.get_full_path|urlencode %}
+                    {{ vol.title }}
+                {% else %}
+                    {{ vol.title|slice:":150"}}
+                    <span class="expand"></span>
+                    <span class="continued">
+                        {{ vol.title|slice:"150:"}}
+                    </span>
+                {% endif %}
                 {% if vol.volume %}<span class="small">[{{ vol.volume }}]</span>{% endif %}
                 {# NOTE: including volume in title since there isn't another obvious schema.org field to use #}
         </span>
