--- a/readux/books/templates/books/snippets/volume_header.html
+++ b/readux/books/templates/books/snippets/volume_header.html
@@ -37,7 +37,7 @@ Expects volume object as vol; set rdfa to true to enable RDFa properties.
     {% if vol.has_pages and form %}
       <div class="row">
         <div class="col-xs-12 col-md-8 col-md-offset-2">
-          <form class="search-bar" role="form" method="GET" action="{{ volume_url }}">
+          <form id="volume-search" class="search-bar" role="form" method="GET" action="{{ volume_url }}">
             <label class="sr-only" for="{{ form.keyword.name }}">{{ form.keyword.label }}</label>
             <div class="input-group">
               {% render_field form.keyword class+="form-control keyword" placeholder="Search in this volume" %}
