--- a/readux/books/templates/books/volume_search.html
+++ b/readux/books/templates/books/volume_search.html
@@ -1,4 +1,5 @@
 {% extends 'site_base.html' %}
+{% load humanize %}
 {# template for page results when searching within a single volume #}
 
 {% block page-subtitle %} | {{ vol.title }}{% if vol.volume %} [{{ vol.volume }}] | Search{% endif %}{% endblock %}
@@ -8,6 +9,18 @@
     {% include 'books/snippets/volume_header.html' %}
     <article>
         <div class="container">
+            {% if pages.paginator.count %}
+                <h2 class="section-heading">{{ pages.paginator.count|intcomma }} matching page{{ pages.paginator.count|pluralize }} found</h2>
+
+                {% if pages.has_other_pages and pages.object_list|length > 1 %}
+                <p class="lead">
+                    displaying {{ pages.start_index|intcomma }} - {{ pages.end_index|intcomma }}
+                </p>
+                {% endif %}
+            {% else %}
+                <h2 id="no-results-found">No results for your search terms.</h2>
+            {% endif %} {# no results #}
+
             {# list view #}
             <div class="item-list">
                 {% for page in pages.object_list %}
