display search help (wildcards/quotes) on volume search form
[#67575752]

--- a/readux/books/templates/books/snippets/volume_header.html
+++ b/readux/books/templates/books/snippets/volume_header.html
@@ -45,6 +45,7 @@ Expects volume object as vol; set rdfa to true to enable RDFa properties.
                 <button class="btn" type="submit"><span class="glyphicon glyphicon-search"></span></button>
               </span>
             </div><!-- /input-group -->
+            <span class="help-block">{{ form.keyword.help_text }}</span>
           </form>
         </div>
       </div>
