display search tips for volume search also

--- a/readux/books/templates/books/search.html
+++ b/readux/books/templates/books/search.html
@@ -29,6 +29,7 @@
                 <button class="btn" type="submit"><span class="glyphicon glyphicon-search"></span></button>
               </span>
             </div><!-- /input-group -->
+            <span class="help-block">{{ form.keyword.help_text }}</span>
           </form>
         </div>
       </div>
