Reordered Title structure
[#77454982]

- Site title is now appended to the end of the page title (ex.
Collection | Readux)

--- a/readux/books/templates/books/pages.html
+++ b/readux/books/templates/books/pages.html
@@ -1,6 +1,15 @@
 {% extends 'site_base.html' %}
 
-{% block page-subtitle %} | {{ vol.title }}{% if vol.volume %} [{{ vol.volume }}] | Pages{% endif %}{% endblock %}
+{% block page-subtitle %}{{ vol.title }}{% if vol.volume %} [{{ vol.volume }}], 
+{% for page in pages.object_list %}
+    {% if forloop.first %}
+        p.{{ page.page_order }}
+    {% endif %}
+    {% if forloop.last %}
+        - {{ page.page_order|default:'end' }}
+    {% endif %}
+{% endfor %}
+| {% endif %}{% endblock %}
 
 {% block content %}
 <div class="container">
