--- a/readux/books/templates/books/page.html
+++ b/readux/books/templates/books/page.html
@@ -1,7 +1,7 @@
 {% extends 'site_base.html' %}
 
-{% block page-subtitle %} | {{ page.volume.title }}
-   {% if page.volume.volume %} [{{ page.volume.volume }}] | Page {{ page.page_order }}{% endif %}{% endblock %}
+{% block page-subtitle %}{{ page.volume.title }}
+   {% if page.volume.volume %} [{{ page.volume.volume }}], p. {{ page.page_order }}{% endif %} | {% endblock %}
 
 {% block javascript %}
   {{ block.super }}
