--- a/readux/books/templates/books/volume.html
+++ b/readux/books/templates/books/volume.html
@@ -9,7 +9,7 @@
 
 {% endblock %}
 
-{% block page-subtitle %} | {{ vol.title }}{% if vol.volume %} [{{ vol.volume }}]{% endif %}{% endblock %}
+{% block page-subtitle %}{{ vol.title|truncatechars:150 }}{% if vol.volume %} [{{ vol.volume }}]{% endif %} | {% endblock %}
 
 {% block head_extras %}
   <link rel="unapi-server" type="application/xml" title="unAPI" href="{% url 'books:unapi' %}" />
