--- a/readux/collection/templates/collection/view.html
+++ b/readux/collection/templates/collection/view.html
@@ -1,7 +1,7 @@
 {% extends 'site_base.html' %}
 {% load humanize %}
 
-{% block page-subtitle %} | Collections | {{ collection.short_label }}{% endblock %}
+{% block page-subtitle %}{{ collection.short_label }} Collection | {% endblock %}
 
 {% block head_extras %}
   <link rel="unapi-server" type="application/xml" title="unAPI" href="{% url 'books:unapi' %}" />
