--- a/templates/site_base.html
+++ b/templates/site_base.html
@@ -44,7 +44,12 @@
   </div>
 {% endblock %}
 
-{% block page-title %}Readux{% block page-subtitle %}{% endblock %}{% endblock %}
+{# The <title> for the page  #}
+{% block page-title %}
+{# If this page is set to display as the Home page, then don't prepend to the title #}
+{% if request.path != "/" %}{% block page-subtitle %}{% endblock %}{% endif %}
+Readux{% endblock %}
+
 {% block nav_class %}navbar-inverse navbar-fixed-top{% endblock %}
 
 {% block navlinks %}
