--- a/readux/books/templates/books/pages.html
+++ b/readux/books/templates/books/pages.html
@@ -1,6 +1,6 @@
 {% extends 'site_base.html' %}
 
-{% block page-subtitle %}{{ vol.title }}{% if vol.volume %} [{{ vol.volume }}], 
+{% block page-subtitle %}{{ vol.title|truncatechars:150 }}{% if vol.volume %} [{{ vol.volume }}], 
 {% for page in pages.object_list %}
     {% if forloop.first %}
         p.{{ page.page_order }}
