--- a/readux/books/templates/books/volume_search.html
+++ b/readux/books/templates/books/volume_search.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 {# template for page results when searching within a single volume #}
 
-{% block page-subtitle %} | {{ vol.title }}{% if vol.volume %} [{{ vol.volume }}] | Search{% endif %}{% endblock %}
+{% block page-subtitle %}{{ vol.title }}{% if vol.volume %} [{{ vol.volume }}], Search | {% endif %}{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -16,19 +16,20 @@
                 <p class="lead">
                     displaying {{ pages.start_index|intcomma }} - {{ pages.end_index|intcomma }}
                 </p>
+                
+                {# list view #}
+                <div class="item-list">
+                    {% for page in pages.object_list %}
+                       {% include 'books/snippets/list_page.html' %}
+                     {% empty %}
+                        <h2 id="no-results-found">No matching pages for your search terms.</h2>
+                    {% endfor %}
+                </div>
+
                 {% endif %}
             {% else %}
                 <h2 id="no-results-found">No results for your search terms.</h2>
             {% endif %} {# no results #}
-
-            {# list view #}
-            <div class="item-list">
-                {% for page in pages.object_list %}
-                   {% include 'books/snippets/list_page.html' %}
-                 {% empty %}
-                    <h2 id="no-results-found">No matching pages for your search terms.</h2>
-                {% endfor %}
-            </div>
         </div> {# /.container #}
 
     {% if pages.has_other_pages %}
